adicionado o calculo e a verificacao de maior

--- a/css/index.css
+++ b/css/index.css
@@ -113,3 +113,8 @@ h1 {
     animation:fade 3000ms infinite;
     -webkit-animation:fade 3000ms infinite;
 }
+#geolocation {
+    width: 200px;
+    height: 200px;
+    margin: 0 auto;
+}
